Name:                crypton-x509
version:             1.7.6
Description:         X509 reader and writer. please see README
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Kazu Yamamoto <kazu@iij.ad.jp>
Synopsis:            X509 reader and writer
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            https://github.com/kazu-yamamoto/crypton-certificate
Cabal-Version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Build-Depends:     base
                   , bytestring
                   , memory
                   , transformers
                   , containers
                   , hourglass
                   , pem
                   , asn1-types
                   , asn1-encoding
                   , asn1-parse
                   , crypton
  Exposed-modules:   Data.X509
                     Data.X509.EC
  Other-modules:     Data.X509.Internal
                     Data.X509.CertificateChain
                     Data.X509.AlgorithmIdentifier
                     Data.X509.DistinguishedName
                     Data.X509.Cert
                     Data.X509.PublicKey
                     Data.X509.PrivateKey
                     Data.X509.Ext
                     Data.X509.ExtensionRaw
                     Data.X509.CRL
                     Data.X509.OID
                     Data.X509.Signed
  ghc-options:       -Wall

Test-Suite test-x509
  Default-Language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-is:           Tests.hs
  Build-Depends:     base
                   , bytestring
                   , mtl
                   , tasty
                   , tasty-quickcheck
                   , hourglass
                   , asn1-types
                   , x509
                   , crypton
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type:     git
  location: https://github.com/kazu-yamamoto/crypton-certificate
  subdir:   x509
